# test

./: 代码思路.txt
toyc_compiler/: CMakeLists.txt  LICENSE  README.md  log  run_test.py  test_compile.cpp
toyc_compiler/include/: ast.h  codegen.h  semantic.h  token.h
toyc_compiler/src/: codegen.cpp  main.cpp  parser.cpp  semantic.cpp
toyc_compiler/test/: test_codegen.cpp  test_semantic.cpp
toyc_compiler/toyc_compiler/: log
toyc_compiler/toyc_compiler/examples/: test.c
toyc_compiler/toyc_compiler/include/: codegen.h  config.h  lexer.h  parser.h  semantic.h
toyc_compiler/toyc_compiler/src/: codegen.cpp  lexer.cpp  parser.cpp
toyc_compiler/toyc_compiler/test/: test_lexer.cpp  test_parser.cpp  test_semantic.cpp
